Fix: Fix the Xs and Os going outside the grid on mobile after pushing to github

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ main{
 
 .game-grid-item p {
     text-align: center;
-    font-size: 2.7em;
+    font-size: 20px;
     height: 100%;
 }
 
